--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,6 +9,9 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
 
-
   liquibase:
-    change-log: classpath:/config/liquibase/master.xml
+    change-log: classpath:/config/liquibase/changelog.xml
+
+server:
+  servlet:
+    context-path: /wordl
